--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 </head>
 <body>
 <h1>Terve kaikki !</h1>
-<p>This is the very first file in my new Git Repo.</p>   
+<p>This is the very first file in my new Git Repo.</p> 
+<ol>
+    <li>tämä on ensimmäinen muutos.</li>
+</ol>  
 
 </body>
 
