update index with emergency  fix

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <p>This is the very first file in my new Git Repo.</p> 
 <ol>
     <li>tämä on ensimmäinen muutos.</li>
+    <li>This line is here to show how merging works.</li>
 </ol>  
 
 </body>
